--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,24 @@ body {
   background-color: var(--mainGray) !important;
   color: var(--mainBlack) !important;
 }
+
+/* Clase para crear estilos para el boton principal, que será reutilizado durante todo el proyecto */
+.main-link {
+  padding: 0.5rem 1rem;
+  background: var(--primaryColor);
+  color: var(--mainWhite);
+  display: inline-block;
+  text-transform: uppercase;
+  letter-spacing: var(--mainSpacing);
+  outline: 2px solid var(--primaryColor);
+  outline-offset: 4px;
+  border: none;
+  transition: var(--mainTransition);
+}
+
+.main-link:hover {
+  background-color: var(--darkGray);
+  text-decoration: none;
+  color: var(--primaryColor);
+  outline-color: var(--darkGray);
+}
